<resources>
    <string name="app_name">Inventory</string>
    <string name="product">Product details</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_dummy">Add dummy record</string>
    <string name="add_new">Add new record</string>
    <string name="delete_all">Delete all records</string>
    <string name="product_name">Product name:</string>
    <string name="product_price">Product price:</string>
    <string name="product_quantity">Product quantity:</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="supplier_phone">Supplier phone:</string>
    <string name="detail">Product details</string>
    <string name="add_sample_inv">Add sample content</string>
    <string name="add_product">Add new record</string>
    <string name="edit_product">Edit record</string>
    <string name="successful">Record saved</string>
    <string name="failed">error</string>
    <string name="question_delete_all">Do you want to delete all records?</string>
    <string name="deleted_all"> deleted</string>
    <string name="details">Provide product details</string>
    <string name="product_name_hint">Provide Product name</string>
    <string name="product_price_hint">Provide Product price</string>
    <string name="product_quantity_hint">Provide Product quantity</string>
    <string name="supplier_name_hint">Provide Supplier name</string>
    <string name="supplier_phone_hint">Provide Supplier phone</string>
    <string name="provide_name">Provide Product name</string>
    <string name="provide_price">Provide Product price</string>
    <string name="provide_quantity">Provide Product quantity</string>
    <string name="provide_supplier">Provide Supplier name</string>
    <string name="provide_phone">Provide Supplier phone</string>
    <string name="add_one">+ 1</string>
    <string name="minus_one">- 1</string>
    <string name="call">Call the supplier</string>
    <string name="sale">Sale</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="product_details">Product details</string>
    <string name="empty">No records to display, use menu to add records</string>
</resources>
